kubernetes/apps/storage/minio/minio/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: minio-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: minio
        app: minio
    spec:
      containers:
      - name: minio
        image: harbor.cloud.traunseenet.com/docker.io/minio/minio:RELEASE.2025-02-07T23-21-09Z
        args:
          - server
          - --console-address
          - ":9001"
          - /data
        ports:
        - containerPort: 9000
        - containerPort: 9001
        volumeMounts:
        - name: minio-data
          mountPath: /data
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: minio-data
        nfs:
          path: /mnt/nvmepool/kubernetes/minio
          server: 10.0.0.154
      restartPolicy: Always
