kubernetes/apps/storage/minio/minio/app/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: minio-service
spec:
  selector:
    app: minio
  ports:
    - name: api
      port: 9000
    - name: ui
      port: 9001
